# python-codigo-fonte

./: py_resultados.csv
Jogos/: jogos.py
Linguagem C/: CMakeLists.txt  CalcularMedia  CalcularMedia.cpp  CalcularMediaUsandoVetor  CalcularMediaUsandoVetor.cpp  ConceitoBasicoVetores  ConceitoBasicoVetores.cpp  ConversorFahrenheitParaRankine  ConversorFahrenheitParaRankine.cpp  Exemplo1  Exemplo1-1.cpp  Exemplo1.cpp  Exemplo2  Exemplo2.cpp  Exemplo3  ExemploDoVetor  LerSomaDosElementos  LerSomaDosElementos.cpp  Linux  Media.cpp  Sequencia  SistemaDeMenu.cpp  Soma  Soma.cpp  Soma2  Soma2.cpp  SomaDeUmaPa  Tabuada  Tabuada.cpp  TemperaturaCentigrado  TemperaturaCentigrado.cpp  exemplos1  exemplos1.cpp  fila-estatica  getchar  getchar.cpp  sistemaDeVendas
Linguagem C/ComandoDeRepetição/: Exemplo1.cpp  Exemplo2.cpp  Exemplo3.cpp  Exemplo4.cpp  Exemplo5.cpp
Linguagem C/EntradaSaida/: Exemplo1.cpp  Exemplo2.cpp  Exemplo3.cpp
Linguagem C/Estruturas(structs)/: Exemplo1.cpp  Exemplo2.cpp
Linguagem C/IntroduçãoAsFunções/: Exemplo1.cpp  Exemplo2.cpp  Exemplo3.cpp
Linguagem C/Linuxa/: Exemplo1.cpp
Linguagem C/ManipulaçãoDeString/: Exemplo1.cpp  Exemplo2.cpp  Exemplo3.cpp  Exemplo4.cpp  Exemplo5.cpp
Linguagem C/OperadoreAritmeticaAtribuição/: Exemplo1.cpp  Exemplo2.cpp  Exemplo3.cpp
Linguagem C/Vetores(Arrays Unidimensionais)/: Exemplo1.cpp
Linguagem C/estrutura-de-dados/: fila-estatica.cpp  sistemaDeVendas.cpp
PIE1/: Aula 04-05 - CC - Interface com Arquivo Final 09.52.43.txt  Aula 04-05 - CC - Interface com Arquivo Final.txt  Aula 04-05 - CC - Interface.txt  (+16 more)
(+328 files in other folders)
