cmake_minimum_required(VERSION 3.26)
project(Linguagem_C)

set(CMAKE_CXX_STANDARD 17)

add_executable(Linguagem_C Tabuada.cpp
        ManipulaçãoDeString/Exemplo2.cpp
        ManipulaçãoDeString/Exemplo5.cpp
        getchar.cpp
        "Vetores(Arrays Unidimensionais)/Exemplo1.cpp"
        Linux.cpp
        Linuxa/Exemplo1.cpp
        Linuxa/Exemplo1.cpp
        ConceitoBasicoVetores.cpp
        ConceitoBasicoVetores.cpp
        ConceitoBasicoVetores.cpp
        Exemplo1-1.cpp
)
